chore(example): prevent layout overflow on error

--- a/examples/vite/src/Send.module.css
+++ b/examples/vite/src/Send.module.css
@@ -109,6 +109,7 @@
 
 .error {
   text-align: center;
+  word-break: break-all;
 }
 
 [data-theme="dark"] .error {
